test/pass/internal/three_exceptions.lily
# This test ensures that Exception dynaloads correctly.

var v = IndexError("")
var v2 = ValueError("")

define f
{
    raise ValueError("")
}

try:
    f()
except Exception:
    0
